LPS-84514 Align dynamic-uploader and navbar avoiding overlapping

--- a/modules/apps/fragment/fragment-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/fragment/fragment-web/src/main/resources/META-INF/resources/css/main.scss
@@ -9,7 +9,3 @@
 @import "SourceEditor";
 
 @import "SourceEditorToolbar";
-
-.dialog-iframe-popup .portlet-fragment-web .lfr-dynamic-uploader {
-	top: 0;
-}
